fix spacing and styling

--- a/src/css/radio.css
+++ b/src/css/radio.css
@@ -6,14 +6,13 @@
   border: 0;
   outline: 0;
   cursor: pointer;
-  margin: 10px;
 }
 
 /* To create surface of toggle button */
 .cm-toggle:after {
   content: "";
-  width: 44px;
-  height: 24px;
+  width: 40px;
+  height: 20px;
   display: inline-block;
   background: #e5e7eb;
   border-radius: 18px;
@@ -23,8 +22,8 @@
 /* Contents before checkbox to create toggle handle */
 .cm-toggle:before {
   content: "";
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
   display: block;
   position: absolute;
   left: 0;
